--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -985,7 +985,7 @@
                             <ol>
                             <img src="{{ '/assets/images/doc-img24.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 10: </span>  Publish</p>
-                            <img src="{{ '/assets/images/doc-img25.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img25.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:30%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 11: </span>  Publish Configuration</p>
                           </ol>
                           </div>
@@ -995,7 +995,7 @@
                             <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 12: </span> Settings</p>
                             <p>Also, it asks Chrome should open or close at the time of exception and at the time of flow completion.</p>
-                            <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:30%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 13: </span>  Global settings</p>
                           </div>
                           <div id="Stop"  class="page-section">
@@ -1027,45 +1027,45 @@
                             <li>Programming</li>
                             <li>Mail Integration</li>
                             <li>Database</li>
-                            <img src="{{ '/assets/images/doc-img31.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img31.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 17: </span>  Action Library</p>
 
                             <li>Stage Category</li>
                             <p>In Techforce RPA Studio, Stage Action is used to divide the flow into sub-flows in order to divide the functionalities and reduce the flow confusion to the developers.</p>
-                            <img src="{{ '/assets/images/doc-img32.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img32.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 18: </span>  Stage Action</p>
 
                             <li> Desktop Automation</li>
                             <p>Desktop Automation is used to automate the desktop applications like Notepad, Excel, MS- Word, folders, files, images and screen functionalities using sub-actions like keyboard shortcuts, Drag and Drop, Open App, Close APP, Close File and Switch App.</p>
-                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 19: </span> Techforce RPA Studio Desktop Automation</p>
 
                             <li>3.4.2 Web Automation</li>
                             <p>Web Automation is used to automate the browser applications like Chrome, Firefox and Internet Explorer, etc., using the Sub-Actions like Open Webpage, Read Table, Frame, Popup, Show, Snap, Dom, Scroll and Back.</p>
-                            <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 20: </span> Techforce RPA Studio Web Automation</p>
 
                             <h4 class="purple">3.4.2 General</h4>
                             <p>General Action is used to automate normal desktop-based and web-based operations using Sub-Actions</p>
                             <p>The Sub-Actions like Mouse Clicks, Conditions, Excel, Loops, Jump Statements, OCR, Exceptional Handling, Files and Folders, Secure FTP, CSV, Stop, Message Box, Clipboard, Assign, Ask, HTTP API, Wait, Read, Get Credentials, Get Secret, Echo, Enter Keystrokes, Read and Module are used in General Action.</p>
-                            <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 21: </span> Techforce RPA Studio General</p>
 
                             <h4 class="purple">3.4.2 Programming</h4>
                             <p>Programming Action is containing String and Technology Sub-Actions. Using String Sub-Action, the user can perform string operations and match case operations. By using Programming Sub-Action, the user can include the programming languages like JavaScript, Python, R and Auto Hotkey scripting, available to automate.</p>
-                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 23: </span> Techforce RPA Studio File Tab</p>
 
                             <h4 class="purple">3.4.2 Mail Integration</h4>
                             <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, OutLook2016 and Save Attachments.</p>
-                            <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 24: </span> Techforce RPA Studio Mail Integration</p>
 
                             <h4 class="purple">3.4.2 Database</h4>
                             <p>The Database used to connect to the database and send or retrieve the data from the Connection: Connects to MySQL or PostgresSQL Database.</p>
                             <li><span>Execute Query: </span>Executes the database query on the connected database.</li>
-                            <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:30%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 25: </span> Techforce RPA Studio Database</p>
                           </div>
 
@@ -2522,13 +2522,13 @@
                           <div id="SecurityArchitecture" class="page-section">
                             <h4><span class="numbers">7.4</span>Security Architecture</h4>
                             <h5>TechForce Platform Enterprise Security Framework</h5>
-                            <p><span class="numbers">1.</span>TechForce platform follows industry best practices in security and continuedly works towards achieving higher standards. We follow NIST guidelines and build our platform security around SANS Top 20 Controls for Internet Security. We also retain a security firm to identify application security issues of our platform on a regular basis</p>
-                            <p><span class="numbers">2.</span>Techforce platform is created as an independently scalable microservices framework. Platform can be easily deployed in all supported Kubernetes platforms including AWS EKS, Azure AKS, GCP Kubernetes and OpenShift.</p>
+                            <p><span class="numbers">1.</span>TechForce platform follows industry best practices in security and continuously works towards achieving higher standards. TechForce follows  NIST guidelines and builds its platform security around SANS Top 20 Controls for Internet Security.TechForce also retains a security firm to identify application security issues of our platform regularly.</p>
+                            <p><span class="numbers">2.</span>The Techforce platform is created as an independently scalable microservices framework.The Platform can be easily deployed in all supported Kubernetes platforms including AWS EKS, Azure AKS, GCP Kubernetes and OpenShift.</p>
                             <h5>Identity and Access Management:</h5>
-                            <p><span class="numbers">1.</span>Techforce platform supports various federated Single Sign-On methods like Oauth, OpenID connect and SAML. At the same time, it allows you to authenticate against enterprise directory services like LDAP and AD.</p>
-                            <p><span class="numbers">2.</span>Techforce platform has a built in Role Base Access Control (RBAC) to ensure authorization at a granular level. Due to our BPM backed framework various authorization workflows with human approval steps can be seamlessly included as part of your automation process</p>
+                            <p><span class="numbers">1.</span>Techforce platform supports various federated Single Sign-On methods like OAuth, OpenID Connect and SAML. At the same time, it allows you to authenticate against enterprise directory services like LDAP and AD.</p>
+                            <p><span class="numbers">2.</span>Techforce platform has a built-in Role-Based Access Control (RBAC) to ensure authorization at a granular level. Owing  to  BPM backed framework various authorization workflows with human approval steps can be seamlessly included as part of the  automation process</p>
                             <h5>Encryption:</h5>
-                            <li>All TechForce microservice encrypted in transit using TLS 1.2.</li>
+                            <li>All TechForce microservices are  encrypted in transit using TLS 1.2.</li>
                             <li>All the data stored in filesystems and databases are encrypted at rest.</li>
                             <li>TechForce platform is packaged with HashiCorp Vault for credential management and can also be integrated with your enterprise HSM</li>
                             <h5>Vulnerability Scans:</h5>
