--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2324,18 +2324,27 @@
 
                          <div id="Registeringworker"  class="page-section">
                              <h4 class="purple"><span class="numbers">5.2</span> Registering worker with EM console</h4>
-                             <h5>Worker creation</h5>
+                             <h5>Worker Management:</h5>
+                             <p>1.The main functionality of a Worker is to execute the flows/business processes that are uploaded on the business process page. So, after adding the worker, while executing the business process, select the worker that was created on the worker screen. </p>
+                             <img src="{{ '/assets/images/doc-img90.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p>After creating a worker, the details of the worker - like name, host and so on - can be seen and the worker RDP details will be sent through an email.</p>
+                             <img src="{{ '/assets/images/doc-img91.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <h5>Worker Categories:</h5>
+                             <p>1.The worker category is the type of worker that is going to be registered. Currently, only the “Reserved” type can be created as a worker.</p>
+                             <h5>Reserved:</h5>
+                             <p>2.If a worker is created as “Reserved” then the flows/business processes can be executed only on that machine.</p>
+                             <h5>Worker creation:</h5>
                              <p><span class="numbers">1.</span>This is the worker screen before a worker is created in the worker management.</p>
                              <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p><span class="numbers">2.</span>To create a worker, Open the Techforce.ai studio, which will create an icon in the task tray when opened, Right click on the studio icon click on settings and register and the below screen displays.</p>
                              <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p><span class="numbers">3.</span>Enter the details and click on submit a success message will be shown. This creates the worker. After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
-                             <p><span class="numbers">4.</span>The below shown is the screen of the worker created, also the details of the created worker can be seen</p>
+                             <p><span class="numbers">3.</span>Enter the details and click on SUBMIT. A message confirming successful submission will appear.This creates the worker.  After creating the worker the details of the worker like name, host and so on can be seen and the worker RDP details will be sent via an email.</p>
+                             <p><span class="numbers">4.</span>The  following image shows the screen of the worker created, also the details of the created worker can be seen</p>
                              <img src="{{ '/assets/images/doc-img83.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                               <h5>Delete Worker</h5>
-                             <p><span class="numbers">1.</span>The created worker can also be deleted. Just click on the delete icon for available the worker details which is to be deleted.</p>
+                             <p><span class="numbers">1.</span>To delete a worker created earlier, just click on the DELETE icon which is available in the details of the worker.</p>
                              <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p><span class="numbers">2.</span>The below shown screen will be seen after clicking on the delete icon. Click on Yes and the worker machine will be deleted.</p>
+                             <p><span class="numbers">2.</span>On the next screen, click on YES to confirm the deletion of the worker on the machine.</p>
                              <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                           </div>
 
