--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -567,7 +567,7 @@
                                            <li style="margin-left:20px;"><a class="child 2" href="#Un-installInstructions"><span class="numbers">3.1.5</span> <span style="margin-left:5px;">Un-install Instructions</span></a></li>
                                         </ul>
                                     </li>
-                                    <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Building a basic bot</a></li>
+                                    <li><a class="child 2" href="#Building"><span class="numbers">3.2.</span> Building a basic bot</a></li>
                                     <li><a class="child 2" href="#Menu"><span class="numbers">3.3</span> Menu Options</a>
                                         <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#New"><span class="numbers">3.3.1</span> <span style="margin-left:5px;">New</span></a></li>
@@ -929,6 +929,35 @@
 
                          <div id="Building"  class="page-section">
                              <h4 class="amethyst">3.2 Building a basic bot</h4>
+                             <h5>Building a basic bot</h5>
+                             <p><span class="numbers">Use case:  </span> Get the Price of iPhone from Amazon</p>
+                             <h5>Launch the studio</h5>
+                             <li><span class="numbers">	Step 1: </span>  Create a new flow by clicking on the New Icon. A new flow will be displayed.</li>
+                             <li><span class="numbers">	Step 2: </span> Click on the Open web page and drag it into the flow, where a new property window will pop up.</li>
+                             <img src="{{ '/assets/images/doc-img93.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                             <p> Select Google Chrome and pass the URL of the website in the <strong>“Page Address”: https://www.amazon.in/</strong></p>
+                              <li><span class="numbers">	Step 3: </span> Now, drag and drop the <strong>“wait”</strong> action into the flow.</li>
+                             <img src="{{ '/assets/images/doc-img94.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p>Pass “5 sec” in the Time in sec. Here 5 seconds wait time is given to load the webpage.</p>
+                              <li><span class="numbers">	Step 4: </span>Drag and drop the <strong>“Enter Keystrokes”</strong> action into the flow.</li>
+                              <p>Capture the XPath of the HTML that needs to be written in the webpage and pass that XPath in the XPath.</p>
+                             <img src="{{ '/assets/images/doc-img95.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p>Create a variable in the variable window and set iPhone as the value pass that variable into the Text.</p>
+                              <li><span class="numbers">	Step 5: </span> Drag and drop the <strong>click</strong> action  into the flow.</li>
+                             <img src="{{ '/assets/images/doc-img96.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p>Select the HTML selector and pass the XPath of the search button in the Selector</p>
+                              <li><span class="numbers">	Step 6: </span> Drag and drop the wait stage and give 5 seconds like in <strong>“step 3”</strong>.</li>
+                             <img src="{{ '/assets/images/doc-img97.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <li><span class="numbers">	Step 7: </span>Drag and drop the read action into the flow.</li>
+                             <img src="{{ '/assets/images/doc-img98.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <p>Pass the XPath of which you want to read into the HTML element and create a variable in the variable window and pass the variable name in the Read to variable.</p>
+                             <img src="{{ '/assets/images/doc-img99.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <li><span class="numbers">	Step 8: </span> Drag and drop the echo action  into the flow.</li>
+                             <img src="{{ '/assets/images/doc-img100.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <p>Pass the variable name created to store the read value from the webpage in the Write your custom Variable.</p>
+                              <p>Echo will show the results in the logs.</p>
+                             <img src="{{ '/assets/images/doc-img101.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <li><span class="numbers">	Step 9: </span> Now save the flow by clicking Save and run the flow by clicking the Play button in the menu bar.</li>
                           </div>
 
                            <div id="Menu"  class="page-section">
