--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -887,7 +887,7 @@
                             <li><span class="numbers">3.</span>Accept the license agreement of Techforce OCR to continue the installation process.</li>
                             <img src="{{ '/assets/images/doc-img7.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <li><span class="numbers">4.</span>After accepting the agreement, specify/select who should have the user level access to OCR Select appropriately from.</li>
-                              <p>“Install for anyone using this computer or Install just for me”.</p>
+                            <p>“Install for anyone using this computer or Install just for me”.</p>
                             <img src="{{ '/assets/images/doc-img8.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
 
                             <li><span class="numbers">5.</span>Select any one of the options and click on NEXT button. In the next screen choose the components that are to be installed or else just click on NEXT to continue the installation process.</li>
@@ -2381,29 +2381,24 @@
 
                          <div id="TriggeringBots"  class="page-section">
                              <h4 class="purple"><span class="numbers">5.3</span> Triggering Bots</h4>
-                             <p><span class="numbers">1.</span>After login we get redirected to the Business Process screen. </p>
-                             <p><span class="numbers">2.</span>Business Process, all the bots or RPA flows to be executed should be uploaded here.</p>
-                             <p><span class="numbers">3.</span>To upload, click on the upload button, zip the RPA flow file, drag and drop the zip file and again click on this upload button and the RPA flow will be uploaded.</p>
+                             <p><span class="numbers">1.</span>	To trigger an action flow, log into Techforce.ai studio and go to the Business Process screen. </p>
+                             <p><span class="numbers">2.</span>	Business Processes page lists the action flows that are published to the eManager console.</p>
+                             <p><span class="numbers">3.</span>	To publish an action flow to the eManager console, first zip the action flow folder. Click on the UPLOAD button on the top right corner of the page, browse the zip file and click the UPLOAD button. The action flow will be uploaded.</p>
                              <p><span class="numbers">4.</span>After uploading, execute the flow by clicking on the PLAY button.</p>
-                             <p><span class="numbers">5.</span>After clicking on the play button, select the Execution target type as Reserved, then specify the Worker in which the flow should get executed and click on submit button.</p>
-                             <p><span class="numbers">6.</span>In on-premise the processes are called “Business Process”.</p>
-                             <p><span class="numbers">7.</span>After uploading the flow if there are any changes in the process then the updated RPA script should also be uploaded with the same name, so it would be added as new version of that business process.</p>
-                             <p><span class="numbers">8.</span>The version details can be seen in the versions of each business process. If required, we can also roll back to the previous version.</p>
-                             <p><span class="numbers">9.</span>The executed flows logs can be seen in the instances of that uploaded business processes.</p>
-                             <p><span class="numbers">10.</span>Here we can also check the version, worker name, execution type, status, start time and end time. </p>
-                             <p><span class="numbers">11.</span>If the flow is executing in the headless mode we can also see the live logs.</p>
-                             <p><span class="numbers">12.</span>Worker list/Queues is the functionality where the status of currently executing bots/workers status and scheduled workers execution status can be seen</p>
-                             <p><span class="numbers">13.</span> Schedules functionality is, to schedule/execute RPA flows whenever required. After uploading a business process/RPA flow, schedule those flows. To schedule a flow first create a “Schedule”.</p>
-                             <p><span class="numbers">14.</span>To create a “Schedule”, navigate to “Schedules” page, and click on “create” button to create a new schedule</p>
-                             <p><span class="numbers">15.</span>Give a name to the schedule.  Choose the “Business Process” that needs to be scheduled, the execution target type, worker machine and the time zone.</p>
-                             <p><span class="numbers">16.</span> Then specify the time intervals to execute the flows/business processes in Minutes, Hourly, Daily, Weekly, Monthly or Advanced,</p>
-                             <p><span class="numbers">17.</span> If selected Minutes, then the business process will execute at specified intervals measured in minutes.</p>
-                             <p><span class="numbers">18.</span>If selected Hourly, then the process executes at specified intervals of hours and minutes.</p>
-                             <p><span class="numbers">19.</span>If selected Daily, then the process executes every day at that specified time considering hours and minutes.</p>
-                             <p><span class="numbers">20.</span> If selected weekly, then the process will execute on the selected weekdays at specified hours and minutes.</p>
-                             <p><span class="numbers">21.</span>If selected monthly, then the process executes based on the selected month, selected weekdays specified hours and minutes.</p>
-                             <p><span class="numbers">22.</span> If selected Advanced, then we need to specify the cron expression for execution.</p>
-                             <p><span class="numbers">23.</span> To stop the business process we can schedule the stop time also, to specify when to stop the bot just enable the stop schedule button and enter the date and time to stop the schedule.</p>
+                             <p><span class="numbers">5.</span>	Select the Execution target type as Reserved, select the Worker in which the flow should get executed and click on the submit button.</p>
+                             <p><span class="numbers">6.</span>	EManager console automatically maintains versioning for the published action flows. Click on the number below versions to see the default version of the action flow. The default version of a published action flow is 1.0. If you publish the action flow again with some changes, the latest one is marked as default one. You can switch back older version of action flow at any point of time by simply selecting the required version.</p>
+                             <p><span class="numbers">7.</span> You can see the logs of an executed action flow under the instances of the business processes. you can also see the live logs of an instance while the execution is in progress.</p>
+                             <p><span class="numbers">8.</span>	Schedules functionality is, to schedule/execute action flows repetitively on a timely basis.</p>
+                             <p><span class="numbers">9.</span> To create a Schedule, navigate to the SCHEDULES page, and click on the CREATE button. </p>
+                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the execution type, worker machine, and time zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly or Advanced. Also, specify when to stop the bot. </p>
+                             <p><span class="numbers">11.</span> If selected Minutes, then the business process executes at specified intervals in minutes.</p>
+                             <p><span class="numbers">12.</span> If Hourly option is selected, then the process executes at specified intervals of hours and minutes.</p>
+                             <p><span class="numbers">13.</span> If the Daily option is selected, then the process executes every day at the specified time considering hours and minutes.</p>
+                             <p><span class="numbers">14.</span> In the case of the weekly option, the process executes on the selected weekdays at specified hours and minutes.</p>
+                             <p><span class="numbers">15.</span> If the monthly option is selected, then the process executes based on the selected month, selected weekdays, specified hours and minutes.</p>
+                             <p><span class="numbers">16.</span> If the Advanced option is selected, you can write your own custom schedule.</p>
+                             <p><span class="numbers">17.</span> Specify the stop time to stop the schedule after certain amount of time. Just enable the stop schedule button and enter the date and time to stop the schedule.</p>
+
                          </div>
 
 
