--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2572,6 +2572,7 @@
                           </div>
 
                       
+                    </div>
                   </div>
               </div>
           </div>
