css and sai doc changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -703,7 +703,7 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#StringFormat"><span class="numbers">3.4.5.1.1</span> <span style="margin-left:35px;">String Format</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#DateFormat"><span class="numbers">3.4.5.1.2</span> <span style="margin-left:35px;">Date Format</span></a></li>
                                           </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Technologies"><span class="numbers">3.4.5.2</span> <span style="margin-left:20px;">Technology</span></a>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Technologies"><span class="numbers">3.4.5.2</span> <span style="margin-left:20px;">Technologies</span></a>
                                           <ul>
                                           <li style="margin-left:20px;"><a class="child 2" href="#JavaScript"><span class="numbers">3.4.5.2.1</span> <span style="margin-left:35px;">JavaScript</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Python"><span class="numbers">3.4.5.2.2</span> <span style="margin-left:35px;">Python</span></a></li>
@@ -962,7 +962,7 @@
 
                            <div id="Menu"  class="page-section">
                                <h4 class="green">3.3 Menu Options</h4>
-                               <p>Techforce.ai RPA Studio Menu bar contains File Tab and Record Tab. The menu toolbar contains the following New, Open, Save, Record, Clear, Publish, Settings, Stop and Play functionalities. Menu bars are very common and easy to find. They help in the efficient use of space.</p>
+                               <p>Techforce.ai RPA Studio Menu bar contains File Tab and Help Tab. The menu toolbar contains the following New, Open, Save, Record, Clear, Publish, Settings, Stop and Play functionalities. Menu bars are very common and easy to find. They help in the efficient use of space.</p>
                                <img src="{{ '/assets/images/doc-img17.png' | relative_url }}" alt="image" style="width:400px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p><span class="numbers">Figure 2: </span>  Menu Panel</p>
                                <ol>
@@ -2015,7 +2015,7 @@
 
               <div id="Technologies"  class="page-section">
                 <h5 class="purple">3.4.5.2 Technologies </h5>
-                <p>Techforce.ai RPA supports three programming languages. The supported languages are JavaScript, Python, R, and AutoHotkey. The user can add simple programming code snippets using this action.</p>
+                <p>Techforce.ai RPA supports four programming languages. The supported languages are JavaScript, Python, R, and AutoHotkey. The user can add simple programming code snippets using this action.</p>
               </div>
 
               <div id="JavaScript"  class="page-section">
@@ -2227,7 +2227,6 @@
                                <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                                <p>7.	Secret Vault is used to store the sensitive information such as credentials, tokens, keys etc. It supports different types of assets like Text, Boolean, Integer, and Credentials.</p>
                                <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-
                            </div>
 
                            <div id="ProcessManagement"  class="page-section">
@@ -2402,7 +2401,7 @@
                              <h4 class="purple"><span class="numbers">5.2</span> Registering worker with EM console</h4>
 
                              <h5>Worker creation:</h5>
-                             <p>This is the worker screen before a worker is created in Worker management.</p>
+                             <p>1.This is the worker screen before a worker is created in Worker management.</p>
                               <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p><span class="numbers">2.</span>To create a worker, open the Techforce.ai studio, which will create an icon in the task tray. Open the task tray, Right-click on the studio icon.Click on settings and register.The following screen displays.</p>
                              <img src="{{ '/assets/images/doc-img82.png' | relative_url }}"alt="image" class="topImg" style="width:400px;border:1px solid green; margin-left:25%;margin-top:10px;margin-bottom:10px;">
